# opus-classical-ocaml

./: .gitignore  README.md  Taskfile.yml  dune-project  opus_classical_ocaml.opam
lib/: dune
test/: dune
